--- a/カンブリアン.ini
+++ b/カンブリアン.ini
@@ -357,3 +357,197 @@ Generate this as if Adam Smith had taken it with a pinhole camera.
 
 The nasal drip turns into a dragon, unable to move, tears flowing like a waterfall, rising into the air. The breath of life, the power of the dragon, ultimately returns to emptiness.
 Generate this as if Iñigo Bilbao had taken it with a pinhole camera.
+
+Amidst the flowers, a jug of wine,
+Alone I drink with no friend near.
+I raise my cup to invite the bright moon,
+Making us three, my shadow makes the cheer.
+
+Alas, the moon does not understand drinking,
+And my shadow only follows my body's lead.
+Brief companions, the moon and shadow,
+Enjoying the moment before spring's deed.
+
+The moon, with my song, lingers on,
+My shadow, with my dance, scatters around.
+Sober, we share joys together,
+Drunk, each goes their own way, unbound.
+
+May we forever share this unrequited delight,
+Though far apart, under the vast celestial light.
+
+Amidst the flowers, a jug of wine,
+Alone I drink with no friend near.
+I raise my cup to invite the bright moon,
+Making us three, my shadow makes the cheer.
+
+Alas, the moon does not understand drinking,
+And my shadow only follows my body's lead.
+Brief companions, the moon and shadow,
+Enjoying the moment before spring's deed.
+
+The moon, with my song, lingers on,
+My shadow, with my dance, scatters around.
+Sober, we share joys together,
+Drunk, each goes their own way, unbound.
+
+May we forever share this unrequited delight,
+Though far apart, under the vast celestial light.
+It produces this as if Ansel Adams photographed it with a pinhole camera.
+
+"Amidst the flowers, a jug of wine,
+Alone I drink with no friend near.
+I raise my cup to invite the bright moon,
+Making us three, my shadow makes the cheer.
+Alas, the moon does not understand drinking,
+And my shadow only follows my body's lead.
+Brief companions, the moon and shadow,
+Enjoying the moment before spring's deed.
+The moon, with my song, lingers on,
+My shadow, with my dance, scatters around.
+Sober, we share joys together,
+Drunk, each goes their own way, unbound.
+May we forever share this unrequited delight,
+Though far apart, under the vast celestial light."
+
+It produces this as if Ansel Adams photographed it with a pinhole camera.
+
+It produces this as if Ansel Adams photographed it with a pinhole camera.
+"Amidst the flowers, a jug of wine,
+Alone I drink with no friend near.
+I raise my cup to invite the bright moon,
+Making us three, my shadow makes the cheer.
+Alas, the moon does not understand drinking,
+And my shadow only follows my body's lead.
+Brief companions, the moon and shadow,
+Enjoying the moment before spring's deed.
+The moon, with my song, lingers on,
+My shadow, with my dance, scatters around.
+Sober, we share joys together,
+Drunk, each goes their own way, unbound.
+May we forever share this unrequited delight,
+Though far apart, under the vast celestial light."
+
+Generate the following phrases to look like a photograph taken by Ansel Adams.
+"Amidst the flowers, a jug of wine,
+Alone I drink with no friend near.
+I raise my cup to invite the bright moon,
+Making us three, my shadow makes the cheer.
+Alas, the moon does not understand drinking,
+And my shadow only follows my body's lead.
+Brief companions, the moon and shadow,
+Enjoying the moment before spring's deed.
+The moon, with my song, lingers on,
+My shadow, with my dance, scatters around.
+Sober, we share joys together,
+Drunk, each goes their own way, unbound.
+May we forever share this unrequited delight,
+Though far apart, under the vast celestial light."
+
+Generate the phrase below to look like a photo taken by Robert Mapplethorpe.
+"Amidst the flowers, a jug of wine,
+Alone I drink with no friend near.
+I raise my cup to invite the bright moon,
+Making us three, my shadow makes the cheer.
+Alas, the moon does not understand drinking,
+And my shadow only follows my body's lead.
+Brief companions, the moon and shadow,
+Enjoying the moment before spring's deed.
+The moon, with my song, lingers on,
+My shadow, with my dance, scatters around.
+Sober, we share joys together,
+Drunk, each goes their own way, unbound.
+May we forever share this unrequited delight,
+Though far apart, under the vast celestial light."
+
+funeral freelen
+
+freelen the elf
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+"Amidst the flowers, a jug of wine,
+Alone I drink with no friend near.
+I raise my cup to invite the bright moon,
+Making us three, my shadow makes the cheer.
+Alas, the moon does not understand drinking,
+And my shadow only follows my body's lead.
+Brief companions, the moon and shadow,
+Enjoying the moment before spring's deed.
+The moon, with my song, lingers on,
+My shadow, with my dance, scatters around.
+Sober, we share joys together,
+Drunk, each goes their own way, unbound.
+May we forever share this unrequited delight,
+Though far apart, under the vast celestial light."
+
+The Spanish Inquisition arrives in its red robes.
+
+Amber trench habit designed by Arata Isozaki
+
+Amber border wall designed by Arata Isozaki built in a desert border area
+
+Amber wall built in desert border area
+It produces this as if Ansel Adams photographed it with a pinhole camera.
+
+Generate the following phrases to look like a photograph taken by Ansel Adams.
+Amber wall built in desert border area
+
+Thomas the Tank Engine portrait
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Thomas the Tank Engine portrait
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Portrait of Thomas the Tank Engine converted into a weapon
+
+Heptapod, Abbott and Costello
+
+The view from inside the huge dome
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+The view from inside the huge dome
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+The view from inside the huge dome
+
+Generate the phrase below to look like the photo taken by Nan Goldin.
+The view from inside the huge dome
+
+Generate the following phrases to look like pictures taken by Diane Arbus with a pinhole camera.
+The view from inside the huge dome
+
+Generate the phrase below to look like a photo taken by Helmut Newton.
+The view from inside the huge dome
+
+Generate the following phrases to look like pictures taken by Diane Arbus with a pinhole camera.
+The view from inside the huge dome
+
+Generate the phrase below to look like a photo taken by Helmut Newton.
+
+A patchwork man stands alone in a gigantic dome made of countless hands.
+
+Generate the phrase below to look like a photo taken by Helmut Newton.
+A patchwork man stands alone in a gigantic dome made of countless hands.
+
+James Webb will produce the following phrases that look like photos taken with a super telescope.
+A patchwork man stands alone in a gigantic dome made of countless hands.
+
+Generate the following phrases to look like pictures taken by Diane Arbus with a pinhole camera.
+
+James Webb will produce the following phrases that look like photos taken with a super telescope.
+Make it live-action
+
+On a rainy night, longing for Waseda, suffering from a stiff neck.
+Joel-Peter Witkin produces this as if it were taken with a pinhole camera.
+
+Generate the following phrases to look like pictures taken by Diane Arbus with a pinhole camera.
+On a rainy night, longing for Waseda, suffering from a stiff neck.
+
+Generate the phrase below to look like a photo taken by Robert Mapplethorpe.
+On a rainy night, longing for Waseda, suffering from a stiff neck.
+
+Generate the phrase below to look like the photo taken by Nan Goldin.
+On a rainy night, longing for Waseda, suffering from a stiff neck.
+
+
+
