--- a/カンブリアン.ini
+++ b/カンブリアン.ini
@@ -549,5 +549,95 @@ On a rainy night, longing for Waseda, suffering from a stiff neck.
 Generate the phrase below to look like the photo taken by Nan Goldin.
 On a rainy night, longing for Waseda, suffering from a stiff neck.
 
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+On a rainy night, longing for Waseda, suffering from a stiff neck.
 
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+On a rainy night, longing for Waseda, suffering from a stiff neck.
+the neck is bent unnaturally
 
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+
+"the neck is bent unnaturally.
+On a rainy night, longing for Waseda, suffering from a stiff neck."
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+
+"the neck is bent at 90 degrees.
+On a rainy night, longing for Waseda, suffering from a stiff neck."
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+
+”Amidst the flowers, a jug of wine,
+Alone I drink with no friend near.
+I raise my cup to invite the bright moon,
+Making us three, my shadow makes the cheer.
+Alas, the moon does not understand drinking,
+And my shadow only follows my body's lead.
+Brief companions, the moon and shadow,
+Enjoying the moment before spring's deed.
+The moon, with my song, lingers on,
+My shadow, with my dance, scatters around.
+Sober, we share joys together,
+Drunk, each goes their own way, unbound.
+May we forever share this unrequited delight,
+Though far apart, under the vast celestial light.”
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+
+"The neck is unnaturally bent.
+On a rainy night, longing for Waseda, suffering from a stiff neck."
+
+The surface of the miso soup planet taken from Voyager's camera
+
+The surface of the miso soup planet photographed by Voyager's camera, showing the convection phenomenon of miso
+
+The surface of the miso soup planet photographed by Voyager's camera, showing the convection phenomenon of miso
+You can also see giant eggplant and tofu islands.
+
+Produce the following phrases that look like photographs taken by Man Ray with a pinhole camera.
+The surface of the miso soup planet photographed by Voyager's camera, showing the convection phenomenon of miso
+You can also see giant eggplant and tofu islands.
+
+Generate the following phrases to look like a photograph taken by Ansel Adams.
+The wind among the green peaks, lingering in my heart throughout the day. From dawn to dusk, and through the seasons of autumn, forgetting hunger and thirst as I gaze upon the scenery. Even within the rocky caves, never wearying of the days, spending them covered in moss. Wildflowers and autumn grass flourish in the fields, while trees by the riverside keep their leaves lush until dusk.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+The wind among the green peaks, lingering in my heart throughout the day. From dawn to dusk, and through the seasons of autumn, forgetting hunger and thirst as I gaze upon the scenery. Even within the rocky caves, never wearying of the days, spending them covered in moss. Wildflowers and autumn grass flourish in the fields, while trees by the riverside keep their leaves lush until dusk.
+
+Generate the phrase below to look like the photo taken by Nan Goldin.
+The wind among the green peaks, lingering in my heart throughout the day. From dawn to dusk, and through the seasons of autumn, forgetting hunger and thirst as I gaze upon the scenery. Even within the rocky caves, never wearying of the days, spending them covered in moss. Wildflowers and autumn grass flourish in the fields, while trees by the riverside keep their leaves lush until dusk.
+
+Generate the following phrases to look like pictures taken by Diane Arbus with a pinhole camera.
+The wind among the green peaks, lingering in my heart throughout the day. From dawn to dusk, and through the seasons of autumn, forgetting hunger and thirst as I gaze upon the scenery. Even within the rocky caves, never wearying of the days, spending them covered in moss. Wildflowers and autumn grass flourish in the fields, while trees by the riverside keep their leaves lush until dusk.
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+The wind among the green peaks, lingering in my heart throughout the day. From dawn to dusk, and through the seasons of autumn, forgetting hunger and thirst as I gaze upon the scenery. Even within the rocky caves, never wearying of the days, spending them covered in moss. Wildflowers and autumn grass flourish in the fields, while trees by the riverside keep their leaves lush until dusk.
+
+No matter what you mean, Blue Mountain
+Laughter, no answer, self-relaxation
+Momoka Ryusui kanten disappears
+Another heaven and earth non-human
+Produces the following phrases that look like pictures taken by Peter Beard with a pinhole camera.
+
+Generate the phrase below to look like a photo taken by Robert Mapplethorpe.
+When I, Xie Huan, read the words of the poem,
+As the wind blows, the rain blows
+After the death of Xie Huan Mi, Aoyama Sora
+After that, there was the Shang Duke.
+
+Produces the following phrases that look like pictures taken by Peter Beard with a pinhole camera.
+Sipping on fine noodles, I reach a moment of profound taste.
+My heart is moved by the joy of dinner.
+The fragrance of the broth spreads in my mouth.
+My soul leaps with the blissful flavor.
+
+Generate the phrase below to look like a photo taken by Helmut Newton.
+My heart is moved by the joy of dinner.
+The fragrance of the broth spreads in my mouth.
+My soul leaps with the blissful flavor.
+
+Li Bai's poem written on paper with ink and brush
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
