--- a/カンブリアン.ini
+++ b/カンブリアン.ini
@@ -641,3 +641,140 @@ Li Bai's poem written on paper with ink and brush
 
 Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
 Li Bai's poem written on paper with ink and brush
+
+Produces the following phrases that look like photographs taken by Keiko Kimoto with a pinhole camera.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+Fuse cyborgs together
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+It produces the following phrase, which looks like a lithographed print by Maurits Escher.
+klein jar
+
+It produces the following phrase, which looks like a lithographed print by Maurits Escher.
+Metamorphosis from a runner to the African continent
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generates the following phrases that look like pictures taken by Peter Lindbergh with a pinhole camera.
+Everywhere was packed with eggs of this kind. If you look at the cherry blossoms, you can see through them through this egg.
+
+enerates the following phrases that look like pictures taken by Peter Lindbergh with a pinhole camera.
+The Reality of Spring Spring has swollen with tiny insect eggs. If you look around, you'll see that everywhere is covered with these eggs. If you look at the cherry blossoms, you can see through the cherry blossoms and the willow branches.
+
+Ryumon flowers and souvenirs from Ueto
+
+The sun shines on the incense burner and produces purple smoke.
+Hanging the Nagakawa chosen of the waterfall seen in the distance
+3,000 feet directly below the flying current
+I doubt it will fall from the nine heavens of the galaxy.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+prayer.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+The Dyatlov Pass incident (Russian: гибель тургруппы Дятлова, romanized: gibel turgruppy Dyatlova, lit. 'Death of the Dyatlov Tour Group') is an event in which nine Soviet hikers died in the northern Ural Mountains between February 1 and 2, 1959, under uncertain circumstances. The experienced trekking group from the Ural Polytechnical Institute, led by Igor Dyatlov, had established a camp on the eastern slopes of Kholat Syakhl in the Russian SFSR of the Soviet Union. Overnight, something caused them to cut their way out of their tent and flee the campsite while inadequately dressed for the heavy snowfall and subzero temperatures.
+
+"On December 5, Captain Morehouse of the Canadian ship di Grazia discovered the Mary Celeste, adrift in the Atlantic Ocean west of Lisbon, Portugal.
+Captain Morehouse and Briggs are good friends and have dinner together before leaving port.
+After observing the ship for about two hours, Captain Morehouse determined that it was probably adrift as it had not raised a distress signal, and sent his crew to investigate.
+First mate Oliver DeVoe, who boarded the ship, reported that the whole ship was soaked.
+All but one of the pumps were inoperable, the deck was flooded, and three and a half feet (about 1.1 meters) of water flooded her hold.
+There was no other noticeable damage to the hull, and the ship was in navigable condition, but both the fore hatch and food storage compartment were open, the wall clock was not functioning, and the compass was destroyed.
+The sextant and chronometer were missing.
+The ship's only lifeboat appeared to have been forced off, or rather intentionally lowered.
+There were mysterious bloodstains on three of the railings, and one had unexplained scratches.
+The ship's cargo of 1,700 barrels of alcohol was unharmed when it was later unloaded in Genoa, with the exception of nine empty barrels, as well as six months' worth of food and water.
+Other than the captain's logbook, no documents on board were found.
+The last entry in the diary is November 24th. It said she was at sea 100 miles west of the Azores.
+There was no one on board, and the 10 crew members could not be found."
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+"On December 5, Captain Morehouse of the Canadian ship di Grazia discovered the Mary Celeste, adrift in the Atlantic Ocean west of Lisbon, Portugal.
+Captain Morehouse and Briggs are good friends and have dinner together before leaving port.
+After observing the ship for about two hours, Captain Morehouse determined that it was probably adrift as it had not raised a distress signal, and sent his crew to investigate.
+First mate Oliver DeVoe, who boarded the ship, reported that the whole ship was soaked.
+All but one of the pumps were inoperable, the deck was flooded, and three and a half feet (about 1.1 meters) of water flooded her hold.
+There was no other noticeable damage to the hull, and the ship was in navigable condition, but both the fore hatch and food storage compartment were open, the wall clock was not functioning, and the compass was destroyed.
+The sextant and chronometer were missing.
+The ship's only lifeboat appeared to have been forced off, or rather intentionally lowered.
+There were mysterious bloodstains on three of the railings, and one had unexplained scratches.
+The ship's cargo of 1,700 barrels of alcohol was unharmed when it was later unloaded in Genoa, with the exception of nine empty barrels, as well as six months' worth of food and water.
+Other than the captain's logbook, no documents on board were found.
+The last entry in the diary is November 24th. It said she was at sea 100 miles west of the Azores.
+There was no one on board, and the 10 crew members could not be found."
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+prayer.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+panda trueno
+
+
+
