--- a/カンブリアン.ini
+++ b/カンブリアン.ini
@@ -776,5 +776,48 @@ Please create a surreal image with multiple arms, hands, and other body parts in
 
 panda trueno
 
+Generate the phrase below to look like the photo taken by Nan Goldin.
+panda trueno
 
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Chiharu shiota generates the following phrases like a photo taken with a pinhole camera.
+Li Bai's poem written on paper with ink and brush
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Produces the following phrases that look like photographs taken by Hans Bellmer with a pinhole camera.
+Please create a surreal image with multiple arms, hands, and other body parts intertwined.
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Chiharu shiota generates the following phrases like a photo taken with a pinhole camera.
+Li Bai's poem written on paper with ink and brush
+
+Generate the following phrases to look like photos taken with a pinhole camera by Joel-Peter Witkin.
+Li Bai's poem written on paper with ink and brush
+
+Generates the following phrase, which looks like a photo taken with a 36mm camera by Joel-Peter Witkin.
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Li Bai's poem written in ink and brush on paper
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Le Corbusier
+
+Generates the following phrases like the architectural photographs taken by Helene Binet with a large format camera.
+Church designed by Peter Zumthor
+
+Produces the following phrases like the photo taken by Joel-Peter Witkin with his Maschinen Krieger camera:
+Li Bai's poem written in ink and brush on paper
 
